Removed additional open-source projects/git repos, reorganized dot-file directories by OS. Created plugged-install.md to store nvim plugins.

--- a/.gitignore
+++ b/.gitignore
@@ -372,10 +372,10 @@ FodyWeavers.xsd
 extensions/
 
 # Orphaned directories
-.fzf/
-.oh-my-zsh/
-.bash_sessions/
-.zsh_sessions/
-.vim/plugged/vim-husk/
-powerline/themes
-powerline/colorschemes
+macos/.fzf/
+macos/.oh-my-zsh/
+macos/.bash_sessions/
+macos/.zsh_sessions/
+macos/.vim/plugged/*/
+macos/powerline/themes
+macos/powerline/colorschemes
