Finalized linux dir updates to .gitignore file, removed .oh-my-zsh,  .vim/plugged contents from linux dir, and dupe powerline files.

--- a/.gitignore
+++ b/.gitignore
@@ -386,5 +386,7 @@ linux/.bash_sessions/
 linux/.zsh_sessions/
 linux/.vim/plugged/*/
 linux/.config/powerline/themes/
+linux/.config/powerline/colorschemes/
 linux/.config/menus/
 linux/.vim/plugged/
+linux/.oh-my-zsh
