Updated dot-back.sh with conditional to detect if current system MacOS or Ubuntu, added alternate cond itional to copy non-symlinked files over t ubunutuo project folder. Created cron-setup script in ./cron which dynamically creates crontab job on first run. Added .CronSetupDone file to project .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -371,7 +371,7 @@ FodyWeavers.xsd
 # Node.js extensions and dependencies
 extensions/
 
-# Orphaned directories
+# Local mac directories
 macos/.fzf/
 macos/.oh-my-zsh/
 macos/.bash_sessions/
@@ -380,6 +380,7 @@ macos/.vim/plugged/*/
 macos/powerline/themes
 macos/powerline/colorschemes
 
+# Local linux directories
 linux/.fzf/
 linux/.oh-my-zsh/
 linux/.bash_sessions/
@@ -390,3 +391,6 @@ linux/.config/powerline/colorschemes/
 linux/.config/menus/
 linux/.vim/plugged/
 linux/.oh-my-zsh
+
+# Local misc.
+cron/.CronSetupDone
